force-app/main/default/objects/Monthly_Forecast_Input__c/Monthly_Forecast_Input__c.object-meta.xml
<CustomObject>
    <label>Monthly Forecast Input</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Monthly Forecast Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Forecast Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>