force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Account_Suffix_Ref__c.field-meta.xml
<CustomField>
    <fullName>Account_Suffix_Ref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Account/Suffix/Ref</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>