force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Actual_NIM__c.field-meta.xml
<CustomField>
    <fullName>Actual_NIM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual NIM%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>