force-app/main/default/objects/Monthly_Forecast_Input__c/fields/adjustMonthYear__c.field-meta.xml
<CustomField>
    <fullName>adjustMonthYear__c</fullName>
    <description>Use for back end process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>adjustMonthYear</label>
    <required>true</required>
    <type>Date</type>
</CustomField>