force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Current_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Ending_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Ending Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>