force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Deal_Forecast_Income__c.field-meta.xml
<CustomField>
    <fullName>Deal_Forecast_Income__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Forecast Income</label>
    <referenceTo>Deal_Forecast_Income__c</referenceTo>
    <relationshipLabel>Monthly Forecast Inputs</relationshipLabel>
    <relationshipName>Monthly_Forecast_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>