force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Drawdown_Rollover_Week3__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Rollover_Week3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Drawdown/Rollover Week3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>