force-app/main/default/objects/Monthly_Forecast_Input__c/fields/F_Projected_Balance__c.field-meta.xml
<CustomField>
    <fullName>F_Projected_Balance__c</fullName>
    <formula>IF ( ISBLANK(Last_Month_Forecast__c)
				,IF( RecordType.Name = &apos;Drawdown&apos;
								,Total_Drawdown_Rollover__c - Total_Repay_Due_Amount__c 
								, Current_Ending_Balance__c - Total_Repay_Due_Amount__c + Total_Drawdown_Rollover__c )
    ,Last_Month_Ending_Balance__c - Total_Repay_Due_Amount__c + Total_Drawdown_Rollover__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F Projected Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>