force-app/main/default/objects/Monthly_Forecast_Input__c/fields/FTP__c.field-meta.xml
<CustomField>
    <fullName>FTP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FTP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>