force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Gross_Rate__c.field-meta.xml
<CustomField>
    <fullName>Gross_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gross Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>