force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Hold_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Hold_Commitment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>วงเงินอายัต</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>