force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Interest_Income__c.field-meta.xml
<CustomField>
    <fullName>Interest_Income__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>