force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Interest_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Interest_Revenue__c</fullName>
    <label>Interest Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>