force-app/main/default/objects/Monthly_Forecast_Input__c/fields/isSkipUpdateCUBE__c.field-meta.xml
<CustomField>
    <fullName>isSkipUpdateCUBE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSkipUpdateCUBE</label>
    <type>Checkbox</type>
</CustomField>