force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Last_Month_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Month Forecast</label>
    <referenceTo>Monthly_Forecast_Input__c</referenceTo>
    <relationshipLabel>Last Month Forecast Inputs</relationshipLabel>
    <relationshipName>Monthly_Forecast_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>