force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Last_Update_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Adjustment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Update Adjustment</label>
    <type>DateTime</type>
</CustomField>