force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Liability_O_S__c.field-meta.xml
<CustomField>
    <fullName>Liability_O_S__c</fullName>
    <label>Liability O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>