force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Long_Term_Loan_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Loan_Repayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Long Term Loan Repayment</label>
    <referenceTo>Long_Term_Loan_Repayment__c</referenceTo>
    <relationshipLabel>Monthly Forecast Inputs</relationshipLabel>
    <relationshipName>Monthly_Forecast_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>