force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month</label>
    <length>3</length>
    <type>Text</type>
</CustomField>