force-app/main/default/objects/Monthly_Forecast_Input__c/fields/NI__c.field-meta.xml
<CustomField>
    <fullName>NI__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>