force-app/main/default/objects/Monthly_Forecast_Input__c/fields/NI_Monthly_Performance__c.field-meta.xml
<CustomField>
    <fullName>NI_Monthly_Performance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NI Monthly Performance</label>
    <referenceTo>NI_Monthly_Performance__c</referenceTo>
    <relationshipLabel>Monthly Forecast Inputs</relationshipLabel>
    <relationshipName>Monthly_Forecast_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>