force-app/main/default/objects/Monthly_Forecast_Input__c/fields/NIIc__c.field-meta.xml
<CustomField>
    <fullName>NIIc__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NIIc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>