force-app/main/default/objects/Monthly_Forecast_Input__c/fields/NIId__c.field-meta.xml
<CustomField>
    <fullName>NIId__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NIId</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>