force-app/main/default/objects/Monthly_Forecast_Input__c/fields/OpportunityLineItem_Id__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Product Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>