force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <formula>Text(Deal_Forecast_Income__r.Probability__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability</label>
    <type>Text</type>
</CustomField>