force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Repay_Due_Amount_Week4__c.field-meta.xml
<CustomField>
    <fullName>Repay_Due_Amount_Week4__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Repay/Due Amount Week4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>