force-app/main/default/objects/Monthly_Forecast_Input__c/fields/SABS__c.field-meta.xml
<CustomField>
    <fullName>SABS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SABS Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>