force-app/main/default/objects/Monthly_Forecast_Input__c/fields/TMB_Suffix__c.field-meta.xml
<CustomField>
    <fullName>TMB_Suffix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Suffix</label>
    <length>14</length>
    <type>Text</type>
</CustomField>