force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Total_Drawdown_Rollover__c.field-meta.xml
<CustomField>
    <fullName>Total_Drawdown_Rollover__c</fullName>
    <formula>Drawdown_Rollover_Week1__c + Drawdown_Rollover_Week2__c + Drawdown_Rollover_Week3__c + Drawdown_Rollover_Week4__c + Drawdown_Rollover_Week5__c + Drawdown_Rollover_Week6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Drawdown/Rollover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>