force-app/main/default/objects/Monthly_Forecast_Input__c/fields/Total_Repay_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Repay_Due_Amount__c</fullName>
    <formula>Repay_Due_Amount_Week1__c + Repay_Due_Amount_Week2__c + Repay_Due_Amount_Week3__c + Repay_Due_Amount_Week4__c + Repay_Due_Amount_Week5__c + Repay_Due_Amount_Week6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Repay/Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>