force-app/main/default/objects/Monthly_Forecast_Input__c/fields/X4G__c.field-meta.xml
<CustomField>
    <fullName>X4G__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>4G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>