force-app/main/default/objects/Monthly_Forecast_Input__c/fields/YearMonthAcctSuffRef__c.field-meta.xml
<CustomField>
    <fullName>YearMonthAcctSuffRef__c</fullName>
    <description>Use for backend process</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>YearMonthAcctSuffRef</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>