force-app/main/default/objects/Monthly_Forecast_Input__c/recordTypes/Drawdown.recordType-meta.xml
<RecordType>
    <fullName>Drawdown</fullName>
    <active>true</active>
    <label>Drawdown</label>
</RecordType>