force-app/main/default/objects/Monthly_Forecast_Input__c/recordTypes/Existing_Fee.recordType-meta.xml
<RecordType>
    <fullName>Existing_Fee</fullName>
    <active>true</active>
    <label>Existing Fee</label>
</RecordType>