force-app/main/default/objects/Monthly_Forecast_Input__c/recordTypes/Existing_Repay.recordType-meta.xml
<RecordType>
    <fullName>Existing_Repay</fullName>
    <active>true</active>
    <label>Existing Repay</label>
</RecordType>