force-app/main/default/objects/Monthly_Forecast_Input__c/recordTypes/New_Deal.recordType-meta.xml
<RecordType>
    <fullName>New_Deal</fullName>
    <active>true</active>
    <label>New Deal</label>
</RecordType>